[gd_scene load_steps=10 format=4 uid="uid://bn6yb3fjv286i"]

[ext_resource type="Texture2D" uid="uid://dn4o56v0dk0gx" path="res://3d models/gate_sign/gateSigns_atlas_gateSign_atlas.png" id="1_q5ect"]
[ext_resource type="Texture2D" uid="uid://beqpu5ctssnx5" path="res://3d models/gate_sign/gateSigns_atlas_gateSign_atlas_normal.png" id="2_e16it"]
[ext_resource type="Script" path="res://3d models/gate_sign/static_body_3d.gd" id="3_qi2j5"]
[ext_resource type="StyleBox" uid="uid://bch01ow85jktb" path="res://AI/text_box.tres" id="4_rfpig"]
[ext_resource type="AudioStream" uid="uid://wqbiqb1s5fjs" path="res://audio/UI_Click_Aftertap_mono.wav" id="5_d75o4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hs00m"]
size = Vector3(0.904236, 0.935791, 0.162598)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mm5o6"]
resource_name = "gateSign_atlas"
cull_mode = 2
albedo_texture = ExtResource("1_q5ect")
roughness = 0.5
normal_enabled = true
normal_texture = ExtResource("2_e16it")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_qts4a"]
_surfaces = [{
"aabb": AABB(-0.445725, -0.00123592, -0.032915, 0.855769, 0.918448, 0.113144),
"format": 34359742465,
"index_count": 456,
"index_data": PackedByteArray("FgAEAAoAFgAQAAQAFAAeAB0AFAANAB4AHwAhACcAHwAYACEAIAAJAAUAIAAiAAkADgAYAB8ADgACABgACAAcABsACAATABwAJwADABEAJwAhAAMAJQAPABcAJQAmAA8AIwAVAAsAIwAkABUABgAMABIABgABAAwAGQAiACAAGQAaACIAKABCAEEAKAAvAEIAHQAmACUAHQAeACYAGwAkACMAGwAcACQAPgAsADIAPgA4ACwAPABGAEUAPAA1AEYARwBJAE8ARwBAAEkASAAxAC0ASABKADEANgBAAEcANgAqAEAAMABEAEMAMAA7AEQATwArADkATwBJACsATQA3AD8ATQBOADcASwA9ADMASwBMAD0ALgA0ADoALgApADQAQQBKAEgAQQBCAEoARQBOAE0ARQBGAE4AQwBMAEsAQwBEAEwAAAACAAEAAwAFAAQABgAIAAcACQALAAoADAAOAA0ADwARABAAEgAUABMAFQAXABYAKAAqACkAKwAtACwALgAwAC8AMQAzADIANAA2ADUANwA5ADgAOgA8ADsAPQA/AD4ABgAAAAEABgAHAAAAIQAFAAMAIQAgAAUABAAJAAoABAAFAAkAGwAHAAgAGwAaAAcAEgAIAAYAEgATAAgACgAVABYACgALABUAHQATABQAHQAcABMADAAUABIADAANABQAFgAPABAAFgAXAA8AHwANAA4AHwAeAA0AAQAOAAwAAQACAA4AEAADAAQAEAARAAMAAgAZABgAAgAAABkAIwAaABsAIwAiABoAJQAcAB0AJQAkABwAJwAeAB8AJwAmAB4AGAAgACEAGAAZACAACwAiACMACwAJACIAFwAkACUAFwAVACQAEQAmACcAEQAPACYALgAoACkALgAvACgASQAtACsASQBIAC0ALAAxADIALAAtADEAQwAvADAAQwBCAC8AOgAwAC4AOgA7ADAAMgA9AD4AMgAzAD0ARQA7ADwARQBEADsANAA8ADoANAA1ADwAPgA3ADgAPgA/ADcARwA1ADYARwBGADUAKQA2ADQAKQAqADYAOAArACwAOAA5ACsAKgBBAEAAKgAoAEEASwBCAEMASwBKAEIATQBEAEUATQBMAEQATwBGAEcATwBOAEYAQABIAEkAQABBAEgAMwBKAEsAMwAxAEoAPwBMAE0APwA9AEwAOQBOAE8AOQA3AE4AAAAaABkAAAAHABoA"),
"lods": [0.163976, PackedByteArray("DQACAAQABAAPAA0AAQACAA4AAQAOAAwAGQAJAAUAGQAIAAkABgAIABkABgAZAAEAGQACAAEADgACAA0AAgAZAAQABAAZAAUACAATABYAEwAIAAYAFwAWABMACAAWACMAIwAWAAsACQALABYACwAIACMACwAJAAgAEwAPABcAEwANAA8ADAANABMABgAMABMABgABAAwAPQAsADIAPQA4ACwAPQA3ADgAPQA/ADcANwA5ADgAOgBGAEUAOgA0AEYANAAtAE8AKQAtADQATwBGADQAOAAtACwAOAA5AC0ATwAtADkATwBOAEYAOQBOAE8AOQA3AE4ALwA6AEUAOgAvAC4ALwBFAD0AMgAvAD0ATQA9AEUAPwA9AE0ATQA3AD8ATQBOADcALgA0ADoALgApADQARQBOAE0ARQBGAE4ADAAOAA0ABAAJABYABAAFAAkAFgAPAAQAFgAXAA8ALgAtACkALAAtAC8ALgAvAC0ALAAvADIA")],
"name": "gateSign_atlas",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 80,
"vertex_data": PackedByteArray("WLl+vWeiIzxWkLE8CxtTvXD+obqSWbw87+dQva3XIzwMqws9mt9HvbrmZz+Ixgs978JKvWnOaj+a27w8yC92vTQxaD/Ak708CxtTvXD+obr2HrO8WLl+vWeiIzwGkLG8vqRQvbDcIzza0Qa9xy92vTQxaD/IN6C87sJKvWjOaj8I3KG8Od1HvcfmZz+/R/y8ko3OPXD+obo3OyA9UH/kPSGwIzyKOyA9YpXNPZLoIjx7jEk996zFPeuLZD+89p88jf6uPcGuZz/o56M8wa2uPTfMZD9pSf48ko3OPXD+obr2HrO8BHjNPbDcIzza0Qa9UX/kPSGwIzzNj7G8zquuPUPMZD/uNfy8jf6uPcGuZz8K3KG896zFPeuLZD/oIqC8uecNvZUwpD65lts8stc7vZQwpD4ktIY8stc7vZMwpD7Qs4a8EcQNvZIwpD7zx+K8eMevPZIwpD7zx+K8W87GPZIwpD6ys4a8W87GPZIwpD4HXKs7IdqvPZIwpD5DTo48puQ1vWXtGz/+WJk80dYHvWXtGz+LdPI8qOQ1vWbtGz+m02m8BtEHvWbtGz/5/dC8RIioPWbtGz/5/dC87o6/PWbtGz9i02m87o6/PWbtGz+Ad2k8CoyoPWbtGz+v9dM8Ih/gvuCdUD/6MV09GDbkvqeETT+Rglo9mWjevgrVTT/UpoU9gDLMPlrAUD/0TqQ9OvHRPkeXUD97I44971DMPgWiUz/xRY09GDbkvqeETT+Qglo9Ih/gvuCdUD/rdlc9WmnevgDVTT9KWik98VDMPgSiUz/QYwQ9O/HRPkeXUD+sggQ9hzHMPmLAUD8spaw8reTYvklKOj+Rglo9JpTRvtMZNz8nml09IcrSvhgVOj8cAIY9jOHKPnTEMD9AQY09eb3QPslxMz97I449TP/KPiqnMz85S6Q9reTYvklKOj+Qglo9WMvSvhcVOj91kCg9JpTRvtMZNz84AVc9Rv7KPjKnMz/So6w8er3QPslxMz+sggQ9jOHKPnTEMD/CZQQ9izF2vum2Uz+1uJ09jDF2vqCZVj9wr4Y9kDF2vqCZVj+65yA9kjF2vum2Uz9yquU8kjF2vs13Mz9yquU8kjF2vsWTMD/B6iA9kjF2vsWTMD82roY9kTF2vs53Mz+1uJ09MWl8PsrhVT9rwIE9MGl8Pjf/Uj90yZg9OGl8PsrhVT9ETgI9Oml8Pjj/Uj94eag8Oml8Pk9SNj95eag8Oml8PoNuMz/5UAI9Oml8PoNuMz9Qv4E9OWl8Pk9SNj90yZg9")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_bji62"]
resource_name = "gateSigns_atlas_Cube_003"
_surfaces = [{
"aabb": AABB(-0.445725, -0.00123592, -0.032915, 0.855769, 0.918448, 0.113144),
"attribute_data": PackedByteArray("YVp2P5oeyT6vcXg/wMuFPWFadj+aHsk+YVp2P5oeyT7vKmc/bLQ8PnzGdz94L4A9RkV2P2wvxz5GRXY/bC/HPkW9dz8Qy4U9Rb13PxDLhT03k3U/WDbIPkW9dz8Qy4U9bLt3P46ckT5su3c/jpyRPmy7dz+OnJE+bLt3P46ckT4syHc/egmTPnQejD7wtvQ9LMh3P3oJkz50How+8Lb0Pa9xeD9iwZE+RSGMPmj6+T2vcXg/YsGRPik+dj90Ng8/b5pAP4AW+TsPXGQ/bLQ8PiYUeT9qL8c+JhR5P2ovxz4bEXk/mB7JPlbvPz+AaSk8GxF5P5geyT4bEXk/mB7JPiqmQD9AlCk8KqZAP0CUKTwqxXk/CjXIPiqmQD9AlCk8Vu8/Pyg0az6tyIY+aPr5PVbvPz8oNGs+dep4P3Q2Dz/kmEA/TMRtPkHChj7wtvQ95JhAP0zEbT5BwoY+8Lb0PSenQD8o7Wo+J6dAPyjtaj4np0A/KO1qPienQD8o7Wo+YS1oP6z6Vz5hLWg/rPpXPmEtaD+s+lc+xzpuPxBWgD1jLWg/7NxbPnyPbT+g+IU9Yy1oP+zcWz5jLWg/7NxbPgnPaD8s2lk+2EFuP4DqhT3YQW4/gOqFPdhBbj+A6oU9faNuPy4FkD59o24/LgWQPmitiz54eqs9ZvNmP5jiuT5hVW8/7oyRPtS8iz5YFLE9YVVvP+6MkT7UvIs+WBSxPWdWbz90IpA+Z1ZvP3QikD5nVm8/dCKQPmdWbz90IpA+cCRKP4Dh+zsPXGQ/rPpXPg9cZD+s+lc+D1xkP6z6Vz4OHko/QPcqPA4eSj9A9yo8+qpjPzjaWT4OHko/QPcqPBxfZD/s3Fs+r89KP4AEKzwcX2Q/7NxbPhxfZD/s3Fs+KwxJP7D3Zz4rDEk/sPdnPisMST+w92c+KwxJP7D3Zz7HC0k/6MlqPkHChj5YFLE9xwtJP+jJaj5BwoY+WBSxPaW9ST9Aumc+pb1JP0C6Zz7/yIY+eHqrPTKBZD+Y4rk+bMN2P0S1ED5sw3Y/RLUQPmzDdj9EtRA+bMN2P0S1ED4deHc/9LUQPh14dz/0tRA+f6x2PzJm5T5/rHY/MmblPmXoQD/oyrA9ZehAP+jKsD2Hu3g/MmblPoe7eD8yZuU+NZ9BP4DOsD01n0E/gM6wPTWfQT+AzrA9NZ9BP4DOsD0qKUk/0PGwPSopST/Q8bA9KilJP9DxsD0qKUk/0PGwPcfaST/Y9LA9x9pJP9j0sD30smQ/FteHPvSyZD8W14c+lIZuPxTOED6Uhm4/FM4QPkYOZj8W14c+Rg5mPxbXhz4ROW8/nMkQPhE5bz+cyRA+ETlvP5zJED4ROW8/nMkQPmlrdz9c7Vg+aWt3P1ztWD6BhnY/smEAP4GGdj+yYQA/N7Z2P5DsWD43tnY/kOxYPje2dj+Q7Fg+N7Z2P5DsWD6Y9EA/fJ0gPpj0QD98nSA+NZd4P7JhAD81l3g/smEAP2irQT9EnyA+aKtBP0SfID5oq0E/RJ8gPmirQT9EnyA+Y+VIPzSwID5j5Ug/NLAgPmPlSD80sCA+Y+VIPzSwID7+lkk/tLEgPv6WST+0sSA+wdVkPzbHoD7B1WQ/NsegPj3Jbj80A1k+PcluPzQDWT7UnmY/NsegPtSeZj82x6A+OXxvP9j+WD45fG8/2P5YPjl8bz/Y/lg+OXxvP9j+WD55DX0/1gySPkEbdz/vikY/QRt3P++KRj95DX0/1gySPurddz/jCUc/6t13P+MJRz+tA30/fAmTPnibSj/i7ws/5cl3P0VTRj/lyXc/RVNGP+XJdz9FU0Y/5cl3P0VTRj9Sx3Y/byoSP1LHdj9vKhI/Usd2P28qEj9Sx3Y/byoSP7fPdj+SdxE/t892P5J3ET9LuH0/QJufPYmwlj5w+vk9RxJ2P8soEj+Esn0/6CmlPUcSdj/LKBI/hLJ9P+gppT3sk3w/cd9+P+yTfD9x334/rQN9P3wJkz54m0o/4u8LPw33fD8WDZI+oVZ9P2Vgfj+hVn0/ZWB+Pw33fD8WDZI+qah8P1Anfj+pqHw/UCd+P6mofD9QJ34/qah8P1Anfj+5YH4/LPxJPwhnez8wRKU9CGd7PzBEpT0IZ3s/MESlPYJmez/QtZ89UKN9PwBLST+CZns/0LWfPfIMkj5w+vk9X6x9P2v8ST9frH0/a/xJP86yej8QXqU9X6x9P2v8ST+6m0o//HUHP7qbSj/8dQc/i498P8CgRT+6m0o//HUHP5uPSj+GSQY/61V9P5m6RD+bj0o/hkkGP5uPSj+GSQY/JJx8P4PgRD8knHw/g+BEPwXaST8q8AY/JJx8P4PgRD+0opY+EIDJPbSilj4QgMk9gI2cPnhDxT0XmX4/OEkSP4mwlj5YQtE9ibCWPlhC0T178H0/wZIRP4mwlj5YQtE9RQuYPpCHzT0T5X0/kkUSPxPlfT+SRRI/E+V9P5JFEj+6m0o//HUHP7qbSj/8dQc/S+J3P0t2fT+6m0o//HUHP27Wdz+StHw/btZ3P5K0fD8SX0s/QvAGP27Wdz+StHw/a6lKP4ZJBj/3G3c/BpB8P2upSj+GSQY/a6lKP4ZJBj+ajnY/fRdKP4CjkD7ohs09mo52P30XSj+ajnY/fRdKP/IMkj5gQtE98gySPmBC0T2IgnY/HmZJP/IMkj5gQtE9DwySPhCAyT0PDJI+EIDJPeTZdT+EHEo/ISShPqBcxT18SHY/5C86P3xIdj/kLzo/fEh2P+QvOj98SHY/5C86P0u4fT8Uu3I+NZN1P/gxOj9LuH0/FLtyPjWTdT/4MTo/7A98P5TEcj5y334/yAVyP+wPfD+UxHI+ct9+P8gFcj/ZKn4/LwJyP9kqfj8vAnI/2Sp+Py8Ccj/ZKn4/LwJyPzlIdj+P9nE/OUh2P4/2cT85SHY/j/ZxPzlIdj+P9nE/OJN1PxL4cT/rTDs/1PpIPiF8Sz+0bfw+OJN1PxL4cT9q334/WiQ6PzT1PD9U70g+1tNJP7Rt/D5q334/WiQ6Pxgrfj9WJDo/GCt+P1YkOj8YK34/ViQ6Pxgrfj9WJDo/CmZ9Pxie8T01k3U/8LYbPzWTdT/wths/CmZ9Pxie8T1zSHY/27QbP3NIdj/btBs/c0h2P9u0Gz9zSHY/27QbP49sez+wtPE9ct9+P3qJUz+PbHs/sLTxPXLffj96iVM/4ip+P+GFUz/iKn4/4YVTP+Iqfj/hhVM/4ip+P+GFUz/PJ3c/intTP88ndz+Ke1M/zyd3P4p7Uz/PJ3c/intTP91ydj8OfVM/zPs6PzYLkT7dcnY/Dn1TPyEkoT5o+vk9xv99P5iqGz809Tw/XgSRPk8xnT7A5Pk9xv99P5iqGz+DS30/laobP4NLfT+Vqhs/g0t9P5WqGz+DS30/laobP0ZFdj9sL8c+Rb13PxDLhT03k3U/WDbIPizIdz96CZM+dB6MPvC29D0mFHk/ai/HPiqmQD9AlCk8KsV5Pwo1yD5W7z8/KDRrPlbvPz8oNGs+rciGPmj6+T0np0A/KO1qPmEtaD+s+lc+YS1oP6z6Vz5jLWg/7NxbPnyPbT+g+IU9faNuPy4FkD5orYs+eHqrPQ4eSj9A9yo8+qpjPzjaWT76qmM/ONpZPvqqYz842lk+xwtJP+jJaj6lvUk/QLpnPjKBZD+Y4rk+rQN9P3wJkz5LuH0/QJufPUcSdj/LKBI/rQN9P3wJkz6CZns/0LWfPbqbSj/8dQc/uptKP/x1Bz+0opY+EIDJPYmwlj5YQtE9E+V9P5JFEj+6m0o//HUHP7qbSj/8dQc/mo52P30XSj+Ao5A+6IbNPQ8Mkj4QgMk91tNJP7Rt/D6DS30/laobPw=="),
"format": 34359742487,
"index_count": 456,
"index_data": PackedByteArray("WQARACkAWQBBABEAUwB6AHYAUwA3AHoAfACFAJ0AfABgAIUAggAnABcAggCKACcAOgBhAH8AOgAIAGEAIABxAG0AIABMAHEAnAAMAEQAnACEAAwAlwA/AF8AlwCbAD8AjQBXAC0AjQCTAFcAGQAwAEkAGQAEADAAZwCLAIMAZwBrAIsAoAAKAQYBoAC8AAoBdwCaAJYAdwB7AJoAbACQAIwAbABwAJAA+wCzAMsA+wDjALMA8AAaARYB8ADUABoBHAEkATwBHAEAASQBIwHFALUAIwEqAcUA2AACAR4B2ACoAAIBwAASAQ4BwADsABIBPgGvAOYAPgEnAa8ANwHeAP8ANwE6Ad4ALAH0AMwALAEwAfQAuwDTAOsAuwCnANMABAEoASABBAEIASgBFQE5ATUBFQEZATkBDQEyAS8BDQERATIBAAAKAAYADgAUABIAGgAiABwAJAAuACoAMQA4ADQAPABGAEIASgBQAE4AVQBcAFoAogCqAKQArQC2ALAAuADCAL4AxgDOAMgA0ADaANYA3ADkAOAA6ADyAO4A9QD8APgAGwACAAcAGwAeAAIAhwAWAA8AhwCBABYAEwAlACsAEwAVACUAbgAdACMAbgBoAB0ASAAhABgASABNACEAKABUAFgAKAAsAFQAdABPAFEAdAByAE8AMgBSAEsAMgA2AFIAWwA+AEMAWwBeAD4AfQA1ADkAfQB4ADUABQA7ADMABQAJADsAQAANABAAQABFAA0ACwBlAGMACwABAGUAjwBpAG8AjwCJAGkAlQBzAHUAlQCSAHMAnwB5AH4AnwCZAHkAYgCAAIYAYgBkAIAALwCIAI4ALwAmAIgAXQCRAJQAXQBWAJEARwCYAJ4ARwA9AJgAugCjAKYAugC/AKMAJgG0AKwAJgEiAbQAsgDHAMoAsgC3AMcADwG9AMEADwELAb0A6gDDALkA6gDvAMMAyQD2APoAyQDPAPYAFwHtAPEAFwETAe0A0QDzAOkA0QDXAPMA+QDdAOEA+QD9AN0AHwHVANkAHwEbAdUApQDbANIApQCrANsA4gCuALEA4gDlAK4AqQAHAQMBqQChAAcBLgEJAQwBLgErAQkBNAEQARQBNAExARABPQEYAR0BPQE4ARgBAQEhASUBAQEFASEBzQApAS0BzQDEACkB/gAzATYB/gD3ADMB5wA7AT8B5wDfADsBAwBqAGYAAwAfAGoA"),
"lods": [0.163976, PackedByteArray("TwFBAUMBQwFQAU8BBQBBATsABQA7ADMAZgAnABcAZgBHAScARQFHAWYARQFmAEABZgBCAUABOQAIADUACABkABAAEABkABQARgFSAVYBUgFGARgAVwFYAFIBRgFWAYwAjABWAUsBSAFLAVYBLwAgAIwALwBJAUYBUwE/AFgBUwFOAT8ATAFOAVUBGQBMAVQBGQAEAEwBZgGzAMsAZgFhAbMAZgFgAWEBZgFnAWABYAHkAOAAYwFoARYBYwFeAWgB0gC0ADwBpAC0ANIAPAEYAdIA4gC0ALAA4gBiAVsBaQFbAWIBaQE4ARgB5wA4AWkB5wDfADgBvQDqABQB6gC9ALgAvQAUAfQAyQC9APQANAH0ABQB/gBlATQBNwHeAP8ANwE6Ad4AuwBfAWQBuwCnAF8BFQE5ATUBFQEZATkBTQE4ADQARAFKAVkARAEVAEoBWQBRAUQBWQBeAFEBXAG1AFkBsgC1ALwAugC8ALUAWgG8AF0B")],
"material": SubResource("StandardMaterial3D_mm5o6"),
"name": "gateSign_atlas",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 362,
"vertex_data": PackedByteArray("WLl+vWeiIzxWkLE8WLl+vWeiIzxWkLE8WLl+vWeiIzxWkLE8WLl+vWeiIzxWkLE8CxtTvXD+obqSWbw8CxtTvXD+obqSWbw8CxtTvXD+obqSWbw8CxtTvXD+obqSWbw87+dQva3XIzwMqws97+dQva3XIzwMqws97+dQva3XIzwMqws97+dQva3XIzwMqws9mt9HvbrmZz+Ixgs9mt9HvbrmZz+Ixgs9mt9HvbrmZz+Ixgs9mt9HvbrmZz+Ixgs978JKvWnOaj+a27w878JKvWnOaj+a27w878JKvWnOaj+a27w878JKvWnOaj+a27w8yC92vTQxaD/Ak708yC92vTQxaD/Ak708yC92vTQxaD/Ak708yC92vTQxaD/Ak708CxtTvXD+obr2HrO8CxtTvXD+obr2HrO8CxtTvXD+obr2HrO8CxtTvXD+obr2HrO8WLl+vWeiIzwGkLG8WLl+vWeiIzwGkLG8WLl+vWeiIzwGkLG8WLl+vWeiIzwGkLG8vqRQvbDcIzza0Qa9vqRQvbDcIzza0Qa9vqRQvbDcIzza0Qa9vqRQvbDcIzza0Qa9xy92vTQxaD/IN6C8xy92vTQxaD/IN6C8xy92vTQxaD/IN6C8xy92vTQxaD/IN6C87sJKvWjOaj8I3KG87sJKvWjOaj8I3KG87sJKvWjOaj8I3KG87sJKvWjOaj8I3KG8Od1HvcfmZz+/R/y8Od1HvcfmZz+/R/y8Od1HvcfmZz+/R/y8Od1HvcfmZz+/R/y8ko3OPXD+obo3OyA9ko3OPXD+obo3OyA9ko3OPXD+obo3OyA9ko3OPXD+obo3OyA9UH/kPSGwIzyKOyA9UH/kPSGwIzyKOyA9UH/kPSGwIzyKOyA9UH/kPSGwIzyKOyA9YpXNPZLoIjx7jEk9YpXNPZLoIjx7jEk9YpXNPZLoIjx7jEk9YpXNPZLoIjx7jEk996zFPeuLZD+89p8896zFPeuLZD+89p8896zFPeuLZD+89p8896zFPeuLZD+89p88jf6uPcGuZz/o56M8jf6uPcGuZz/o56M8jf6uPcGuZz/o56M8jf6uPcGuZz/o56M8wa2uPTfMZD9pSf48wa2uPTfMZD9pSf48wa2uPTfMZD9pSf48wa2uPTfMZD9pSf48ko3OPXD+obr2HrO8ko3OPXD+obr2HrO8ko3OPXD+obr2HrO8ko3OPXD+obr2HrO8BHjNPbDcIzza0Qa9BHjNPbDcIzza0Qa9BHjNPbDcIzza0Qa9BHjNPbDcIzza0Qa9UX/kPSGwIzzNj7G8UX/kPSGwIzzNj7G8UX/kPSGwIzzNj7G8UX/kPSGwIzzNj7G8zquuPUPMZD/uNfy8zquuPUPMZD/uNfy8zquuPUPMZD/uNfy8zquuPUPMZD/uNfy8jf6uPcGuZz8K3KG8jf6uPcGuZz8K3KG8jf6uPcGuZz8K3KG8jf6uPcGuZz8K3KG896zFPeuLZD/oIqC896zFPeuLZD/oIqC896zFPeuLZD/oIqC896zFPeuLZD/oIqC8uecNvZUwpD65lts8uecNvZUwpD65lts8uecNvZUwpD65lts8uecNvZUwpD65lts8stc7vZQwpD4ktIY8stc7vZQwpD4ktIY8stc7vZQwpD4ktIY8stc7vZQwpD4ktIY8stc7vZMwpD7Qs4a8stc7vZMwpD7Qs4a8stc7vZMwpD7Qs4a8stc7vZMwpD7Qs4a8EcQNvZIwpD7zx+K8EcQNvZIwpD7zx+K8EcQNvZIwpD7zx+K8EcQNvZIwpD7zx+K8eMevPZIwpD7zx+K8eMevPZIwpD7zx+K8eMevPZIwpD7zx+K8eMevPZIwpD7zx+K8W87GPZIwpD6ys4a8W87GPZIwpD6ys4a8W87GPZIwpD6ys4a8W87GPZIwpD6ys4a8W87GPZIwpD4HXKs7W87GPZIwpD4HXKs7W87GPZIwpD4HXKs7W87GPZIwpD4HXKs7IdqvPZIwpD5DTo48IdqvPZIwpD5DTo48IdqvPZIwpD5DTo48IdqvPZIwpD5DTo48puQ1vWXtGz/+WJk8puQ1vWXtGz/+WJk8puQ1vWXtGz/+WJk8puQ1vWXtGz/+WJk80dYHvWXtGz+LdPI80dYHvWXtGz+LdPI80dYHvWXtGz+LdPI80dYHvWXtGz+LdPI8qOQ1vWbtGz+m02m8qOQ1vWbtGz+m02m8qOQ1vWbtGz+m02m8qOQ1vWbtGz+m02m8BtEHvWbtGz/5/dC8BtEHvWbtGz/5/dC8BtEHvWbtGz/5/dC8BtEHvWbtGz/5/dC8RIioPWbtGz/5/dC8RIioPWbtGz/5/dC8RIioPWbtGz/5/dC8RIioPWbtGz/5/dC87o6/PWbtGz9i02m87o6/PWbtGz9i02m87o6/PWbtGz9i02m87o6/PWbtGz9i02m87o6/PWbtGz+Ad2k87o6/PWbtGz+Ad2k87o6/PWbtGz+Ad2k87o6/PWbtGz+Ad2k8CoyoPWbtGz+v9dM8CoyoPWbtGz+v9dM8CoyoPWbtGz+v9dM8CoyoPWbtGz+v9dM8Ih/gvuCdUD/6MV09Ih/gvuCdUD/6MV09Ih/gvuCdUD/6MV09Ih/gvuCdUD/6MV09GDbkvqeETT+Rglo9GDbkvqeETT+Rglo9GDbkvqeETT+Rglo9GDbkvqeETT+Rglo9mWjevgrVTT/UpoU9mWjevgrVTT/UpoU9mWjevgrVTT/UpoU9mWjevgrVTT/UpoU9gDLMPlrAUD/0TqQ9gDLMPlrAUD/0TqQ9gDLMPlrAUD/0TqQ9gDLMPlrAUD/0TqQ9OvHRPkeXUD97I449OvHRPkeXUD97I449OvHRPkeXUD97I449OvHRPkeXUD97I44971DMPgWiUz/xRY0971DMPgWiUz/xRY0971DMPgWiUz/xRY0971DMPgWiUz/xRY09GDbkvqeETT+Qglo9GDbkvqeETT+Qglo9GDbkvqeETT+Qglo9GDbkvqeETT+Qglo9Ih/gvuCdUD/rdlc9Ih/gvuCdUD/rdlc9Ih/gvuCdUD/rdlc9Ih/gvuCdUD/rdlc9WmnevgDVTT9KWik9WmnevgDVTT9KWik9WmnevgDVTT9KWik9WmnevgDVTT9KWik98VDMPgSiUz/QYwQ98VDMPgSiUz/QYwQ98VDMPgSiUz/QYwQ98VDMPgSiUz/QYwQ9O/HRPkeXUD+sggQ9O/HRPkeXUD+sggQ9O/HRPkeXUD+sggQ9O/HRPkeXUD+sggQ9hzHMPmLAUD8spaw8hzHMPmLAUD8spaw8hzHMPmLAUD8spaw8hzHMPmLAUD8spaw8reTYvklKOj+Rglo9reTYvklKOj+Rglo9reTYvklKOj+Rglo9reTYvklKOj+Rglo9JpTRvtMZNz8nml09JpTRvtMZNz8nml09JpTRvtMZNz8nml09JpTRvtMZNz8nml09IcrSvhgVOj8cAIY9IcrSvhgVOj8cAIY9IcrSvhgVOj8cAIY9IcrSvhgVOj8cAIY9jOHKPnTEMD9AQY09jOHKPnTEMD9AQY09jOHKPnTEMD9AQY09jOHKPnTEMD9AQY09eb3QPslxMz97I449eb3QPslxMz97I449eb3QPslxMz97I449eb3QPslxMz97I449TP/KPiqnMz85S6Q9TP/KPiqnMz85S6Q9TP/KPiqnMz85S6Q9TP/KPiqnMz85S6Q9reTYvklKOj+Qglo9reTYvklKOj+Qglo9reTYvklKOj+Qglo9reTYvklKOj+Qglo9WMvSvhcVOj91kCg9WMvSvhcVOj91kCg9WMvSvhcVOj91kCg9WMvSvhcVOj91kCg9JpTRvtMZNz84AVc9JpTRvtMZNz84AVc9JpTRvtMZNz84AVc9JpTRvtMZNz84AVc9Rv7KPjKnMz/So6w8Rv7KPjKnMz/So6w8Rv7KPjKnMz/So6w8Rv7KPjKnMz/So6w8er3QPslxMz+sggQ9er3QPslxMz+sggQ9er3QPslxMz+sggQ9er3QPslxMz+sggQ9jOHKPnTEMD/CZQQ9jOHKPnTEMD/CZQQ9jOHKPnTEMD/CZQQ9jOHKPnTEMD/CZQQ9izF2vum2Uz+1uJ09izF2vum2Uz+1uJ09izF2vum2Uz+1uJ09izF2vum2Uz+1uJ09jDF2vqCZVj9wr4Y9jDF2vqCZVj9wr4Y9jDF2vqCZVj9wr4Y9jDF2vqCZVj9wr4Y9kDF2vqCZVj+65yA9kDF2vqCZVj+65yA9kDF2vqCZVj+65yA9kDF2vqCZVj+65yA9kjF2vum2Uz9yquU8kjF2vum2Uz9yquU8kjF2vum2Uz9yquU8kjF2vum2Uz9yquU8kjF2vs13Mz9yquU8kjF2vs13Mz9yquU8kjF2vs13Mz9yquU8kjF2vs13Mz9yquU8kjF2vsWTMD/B6iA9kjF2vsWTMD/B6iA9kjF2vsWTMD/B6iA9kjF2vsWTMD/B6iA9kjF2vsWTMD82roY9kjF2vsWTMD82roY9kjF2vsWTMD82roY9kjF2vsWTMD82roY9kTF2vs53Mz+1uJ09kTF2vs53Mz+1uJ09kTF2vs53Mz+1uJ09kTF2vs53Mz+1uJ09MWl8PsrhVT9rwIE9MWl8PsrhVT9rwIE9MWl8PsrhVT9rwIE9MWl8PsrhVT9rwIE9MGl8Pjf/Uj90yZg9MGl8Pjf/Uj90yZg9MGl8Pjf/Uj90yZg9MGl8Pjf/Uj90yZg9OGl8PsrhVT9ETgI9OGl8PsrhVT9ETgI9OGl8PsrhVT9ETgI9OGl8PsrhVT9ETgI9Oml8Pjj/Uj94eag8Oml8Pjj/Uj94eag8Oml8Pjj/Uj94eag8Oml8Pjj/Uj94eag8Oml8Pk9SNj95eag8Oml8Pk9SNj95eag8Oml8Pk9SNj95eag8Oml8Pk9SNj95eag8Oml8PoNuMz/5UAI9Oml8PoNuMz/5UAI9Oml8PoNuMz/5UAI9Oml8PoNuMz/5UAI9Oml8PoNuMz9Qv4E9Oml8PoNuMz9Qv4E9Oml8PoNuMz9Qv4E9Oml8PoNuMz9Qv4E9OWl8Pk9SNj90yZg9OWl8Pk9SNj90yZg9OWl8Pk9SNj90yZg9OWl8Pk9SNj90yZg9CxtTvXD+obqSWbw87+dQva3XIzwMqws97+dQva3XIzwMqws978JKvWnOaj+a27w878JKvWnOaj+a27w8CxtTvXD+obr2HrO8vqRQvbDcIzza0Qa9vqRQvbDcIzza0Qa9xy92vTQxaD/IN6C8xy92vTQxaD/IN6C8xy92vTQxaD/IN6C8Od1HvcfmZz+/R/y8ko3OPXD+obo3OyA9ko3OPXD+obo3OyA9UH/kPSGwIzyKOyA9UH/kPSGwIzyKOyA996zFPeuLZD+89p8896zFPeuLZD+89p88BHjNPbDcIzza0Qa9BHjNPbDcIzza0Qa9BHjNPbDcIzza0Qa9BHjNPbDcIzza0Qa9jf6uPcGuZz8K3KG896zFPeuLZD/oIqC896zFPeuLZD/oIqC8GDbkvqeETT+Rglo9OvHRPkeXUD97I44971DMPgWiUz/xRY09GDbkvqeETT+Qglo9O/HRPkeXUD+sggQ9reTYvklKOj+Rglo9reTYvklKOj+Rglo9jOHKPnTEMD9AQY09eb3QPslxMz97I449TP/KPiqnMz85S6Q9reTYvklKOj+Qglo9reTYvklKOj+Qglo9Rv7KPjKnMz/So6w8Rv7KPjKnMz/So6w8jOHKPnTEMD/CZQQ9kjF2vsWTMD82roY9OWl8Pk9SNj90yZg9W1GsWAUdBZG5QYKEGwBM4FE+rUEAAP7/ZAZkhv7//v//fwAA/3//v5B57URfAPrFW1GsWAUdBZFRPq1BAAD+/4l9cYfdAMDBkHntRGUA+sVbUaxYBR0FkblBgoQYAEvgQIMFfpoDJcDQhvm71QwnwNFXGqoOAA+i70LVexUAaqDQhvm71QwnwJ6KYPX/f/+/0Vcaqg4AD6IzQTPB/3//v9FXGqoOAA+iM0Ezwf9//7/vQtV7FQBqoGcGl3n//wCAicAAAGv/2b//fwAA/3//v6cooCsM4m3uUT6tQQAA/v+nKKArDOJt7koEKsLW//efUT6tQQAA/v9kBmSG/v/+/+H9//+0/9m/icAAAGv/2b+nKKArDOJt7koEKsLW//efoCkK19X/kaEzQTPB/3//v1wE0T3W//afZwaXef////9qw4T6l/Xdv56KYPX/f/+/oCkK19X/kaEzQTPB/3//v2rDhPqX9d2/SQIZALT/zb+gKQrX1f+RoVwE0T3W//af/38AAP9//7/WqQ9YZ14p0X3BfkH/f/+/kHntRA8A+MXWqQ9YZ14p0Tq7EokXQGbAfcF+Qf9//79K+rSF/3//v9apD1hnXinROrsSiRpAasCJfXGHjQCXwZB57UQUAPjFNa4jqFVDMMD6vy1+GEEvwDnDxbz/f/+/qv6qfv9//7/Qhvm71QwnwJ6KYPX/f/+/Na4jqFVDMMA5w8W8/3//v0CDBX6YAyTA0Ib5u9UMJ8A1riOoVUMwwPq/LX4YQS/AicAAAGv/2b//fwAA/3//vynXjSstoI2vfcF+Qf9//7/h/f//tP/Zv4nAAABr/9m/KdeNKy2gja8N/PrB8b/uvynXjSstoI2vDfz6wfG/7r99wX5B/3//v0r6tIX/f/+/asOE+pf13L+J13LSZL3vvyj+DD/1v+6/SQIZALT/zb9qw4T6l/Xcv56KYPX/f/+/iddy0mS97785w8W8/3//v4nXctJkve+/KP4MP/W/7r85w8W8/3//v6r+qn7/f/+/pIayfR8HLsCJfXGHEwCnvupBvH8PAOCguUGChEkAqJ/qQbx/DwDgoLlBgoRGAKmfZAZkhgAAAICjAKKAAAAAgEoEKsLW//efzABswNb/+J9kBmSGAAAAgKMAooAAAACAC////7T/2b/h/f//tP/Zv0oEKsLW//efzABswNb/+J8L////tP/Zv+H9//+0/9m/Dfz6wfG/7r+9/qLA8L/uvw38+sHxv+6/vf6iwPC/7r9K+rSF/3//v3D+jYH/f/+/OrsSicU/+b9Hwe1+BkIxwEr6tIX/f/+/cP6Ngf9//7+khrJ9FwcqwDq7EonBP/2/R8HtfgZCMcCJfXGHcgB8vupBvH8TAN+g70LVew8AbKBnBpd5/////6MAooD+////QIMFfp8DKMCkhrJ9BwciwOpBvH8TAN+g70LVew8AbKBcBNE91v/1n8wAbMDW//ifZwaXef////+jAKKA/v///wv///+0/9m/SQIZALT/zb9cBNE91v/1n8wAbMDW//ifC////7T/2b8o/gw/9b/uv73+osDwv+6/SQIZALP/zb8o/gw/9b/uv73+osDwv+6/cP6Ngf9//7+q/qp+/3//v/q/LX4ZQTDAR8HtfgNCLsBw/o2B/3//v6r+qn7/f/+/QIMFfp0DJ8CkhrJ9AAcewPq/LX4ZQTDAR8HtfgNCLsBycnHySX/0v4d1cro3f/2fzExQn0R/EZrjMuOySH90v8xMUJ9EfxGai0dyb/dhIoDjMuOy////v5olZFr///+/Wng+f15+Y4CHdXK6OH/8n8xMUJ9EfxGai0dybwliHIBOgUu/Q38poIarxalEfwWgLL63fnp9WYBqewyARX9fgIarxalEfwWgLL63fnp9WYCAwn69TH9gwGn9aX3/f/+/ToFLv0N/KaD4hgb5SX8EwIarxalEfwWggMJ+vUx/YMAqH4vMKIH75ZoQrDjsnfP/4zLjskh/dL+aJWRa////v3JycfJJf/S/MzoY9U6B6t8qH4vMKIH75eMy47JIf3S/2ACVCLOBn/8zOhj1UIHq3yofi8wogfvlmhCsOPKd8v/0wTf8QoGx3/iGBvlJfwTAz9ZZ0ziAQeCAwn69TH9gwM/WWdM4gEHgsP5xP5aCpf+Awn69TH9gwGn9aX3/f/+///+P/7uAoP/0wTf8QoGx38/WWdM4gEHgsP5xP5aCpf9mVYBRghsjkGBEnzv/////i0dyb4lhRYCaJWRa////vzdvyBD/////VnMgRr4/BoBmVYBRghsjkGBEnzv/////Wng+f2h+XoBWcyBGvT8HgGZVgFGCGyOQi0dyb5xhP4A4p0JTmV+N0B29Hj3/f/+/r3dQCO3/e4CAeVtD4b8AgDinQlOZX43QHb0ePf9//78svrd+en1ZgGn9aX3/f/+/OKdCU5lfjdAsvrd+en1ZgGp7DIBFf1+AgHlbQ+G/AIBwLtEqlOTp72BEnzv///+/mhCsOBWe5/+aJWRa////v9gAlQjFgZb/rjkfDYw/wv9wLtEqlOTp75oQrDganuX/N2/IEP////+uOR8NjT/D/3Au0SqU5OnvYESfO////////4//u4Cg/9zTbigRoJyvsP5xP5aCpv/ZPRYE2z+6/9zTbigRoJyvHb0ePf9//7+w/nE/loKm/2n9aX3/f/+/3NNuKBGgnK8dvR49/3//v9k9FgTbP7r/r3dQCO3/e4CfgP9/RH9dgK6Al79DfyagWng+f3N+WYCHdXK6UH/3n7yAQv9Jf/+/roCXv0N/JqBycnHySX/0v4d1crpOf/ifvIBC/0l//7+hP2L/QoG333JycfJJf/S/MzoY9TSB8N+hP2L/QoG33wAAEf69gKH/2ACVCJuBqv8zOhj1NYHw31nAegDXP7r/AAAR/r2Aof/YAJUIpYGl/645Hw19P6//WcB6ANc/uv/dgt0CLIECwDdvyBD/////rjkfDX4/sf/Bgf1A4r8AgN2C3QIsgQLAN2/IEP////9WcyBGQMAJgJ+A/39Ef12AwYH9QOK/AIBaeD5/e35VgFZzIEY/wAiAvIBC/0l//7+ugJe/Q38moE6BS79Dfyig+IYG+Ul/BMCfgP9/RX9dgK6Al79DfyagToFLv0N/KKBqewyARH9fgLyAQv9Jf/+/9ME3/EOBsd/4hgb5SX8EwKE/Yv9Cgbff//+P/7uAoP/0wTf8Q4Gx36E/Yv9CgbffAAAR/r2Aof///4//u4Cg/1nAegDXP7r/AAAR/r2Aof/ZPRYE2z+6/1nAegDXP7r/3YLdAiyBAsDZPRYE2z+6/693UAjt/3uAwYH9QOK/AIDdgt0CLIECwK93UAjt/3uAgHlbQ+G/AICfgP9/RX9dgMGB/UDivwCAansMgER/X4CAeVtD4b8AgNYmyYEFHQWRgHvUXt0AwMG5QYKEBR0FkW2He4HVDCfAn2ue6/9//786A6CMDOJt7vYR+xS0/9m/ewO1owzibe5qw4T61f+RoXIDRT7V/5GhsV6x3v9//79Z3O78l/Xdv6WbDBv/f/+/1qkPWP9//79j2VldZ14p0VWTXYYXQGbA7Jx6gVVDMMCeqmDV/3//v5HoPA60/9m/F/07oi2gja+SkwAALaCNr33BfkEtoI2v/uuj/pf13L/N/9n+ZL3vv73/g6j/f/+/ynn09v///7//g/77TH9gwCqjQH9Dfymgc3sg9Eh/dL/Ggjf9OIBB4FxwQUeCGyOQmCy7XoIbI5DhtVREmV+N0FfYtFeZX43QKqNAf3p9WYBXbYExlOTp78gtd1+U5Onv2T0WBLuAoP/X3DlOEaCcr1XFpDURoJyvFHHIL//////2fPBRRX9dgA==")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_qts4a")

[node name="wood_sign_object" type="StaticBody3D"]
script = ExtResource("3_qi2j5")
item_description = "Blackwood outpost"
interact_prompt = "Interact"

[node name="button_sound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_d75o4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0205994, 0.469116, 0.0246582)
shape = SubResource("BoxShape3D_hs00m")

[node name="wood_sign_mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_bji62")
skeleton = NodePath("")

[node name="TextPanel" type="Panel" parent="wood_sign_mesh"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_rfpig")

[node name="book_text" type="Label" parent="wood_sign_mesh/TextPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "This is something interesting text about the painting
"
autowrap_mode = 2

[node name="Button" type="Button" parent="wood_sign_mesh/TextPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = 13.0
offset_bottom = 38.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = ExtResource("4_rfpig")
text = "CONTINUE"

[connection signal="pressed" from="wood_sign_mesh/TextPanel/Button" to="." method="_on_button_pressed"]
